# repotriage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/abstention_policies/pandas-dev__pandas/: issue-confidence-v1.json
configs/baselines/pandas-dev__pandas/: tfidf-logreg-v1.json
configs/inference/pandas-dev__pandas/: local-v1.json
configs/label_policies/pandas-dev__pandas/: policy-v1.json  policy-v2.json
configs/model_datasets/pandas-dev__pandas/: temporal-v1.json
configs/retrieval_baselines/pandas-dev__pandas/: tfidf-cosine-v1.json
configs/threshold_policies/pandas-dev__pandas/: global-v1.json
docs/: demo.md  development-notes.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: AbstentionBanner.tsx  ClassificationPanel.tsx  DebugDetails.tsx  FeedbackPanel.tsx  HealthIndicator.tsx  InferenceResults.tsx  IssueInputForm.test.tsx  IssueInputForm.tsx  LabelCheckboxGroup.tsx  OutcomePreview.tsx  ResultsSummary.test.tsx  ResultsSummary.tsx  SimilarIssuesList.tsx  StatusAlert.tsx
frontend/src/hooks/: useFeedback.ts  useHealth.ts  useInference.ts
frontend/src/lib/: feedback.test.ts  feedback.ts  format.test.ts  format.ts  samples.test.ts  samples.ts
scripts/: check-demo-ready.sh  docker-smoke.sh
src/repotriage/: __init__.py  cli.py  filesystem.py  paths.py
src/repotriage/abstention_policy/: __init__.py  builder.py  confidence.py  config.py  evaluator.py  models.py  reader.py  report.py  selector.py  sweep.py
src/repotriage/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py  settings.py
src/repotriage/audit/: __init__.py  analyzer.py  builder.py  models.py  (+3 more)
tests/: conftest.py  helpers.py  test_abstention_policy_builder.py  test_abstention_policy_confidence.py  test_abstention_policy_integration.py  test_abstention_policy_leakage.py  test_abstention_policy_selector.py  test_abstention_policy_sweep.py  test_api_feedback.py  test_api_feedback_integration.py  test_api_health.py  test_api_infer.py  test_api_integration.py  test_api_startup.py  test_artifact_readiness.py  test_atomic_io.py  test_audit_analyzer.py  test_audit_builder.py  test_audit_models.py  test_audit_policy.py  test_audit_reader.py  test_audit_report.py  test_baseline_builder.py  test_baseline_config.py  test_baseline_environment.py  test_baseline_evaluator.py  test_baseline_features.py  test_baseline_integration.py  test_baseline_leakage.py  test_baseline_model_fingerprint.py  test_baseline_models_ml.py  test_baseline_selector.py  test_builder.py  test_cli.py  test_cli_audit_dataset.py  test_cli_build_dataset.py  test_cli_build_label_policy.py  test_cli_build_model_dataset.py  test_cli_build_retrieval_baseline.py  test_cli_infer_issue.py  (+49 more)
(+81 files in other folders)
